# ycm-youtube-channel-monitor

./: .env.example  .gitignore  .gitkeep  README.md  pyproject.toml
data/raw/youtube/channels/landed_date=2026-03-11/hour=21/: channels.jsonl
data/raw/youtube/channels/year=2026/month=03/day=12/hour=01/: channels.jsonl
docs/: change_log.md  data_dictionary.md  pipeline_inventory.md  runbook.md
draft/: .env.example  README.md  pyproject - Copy.toml  requirements.txt
init/: 01_create_schemas.sql
src/bronze/: channels.py
src/config/: __init__.py  config.py  constants.py  settings.py
src/logging/: __init__.py  logging.py
src/models/: youtube.py
src/raw/: channels.py
src/silver/: channels.py  channels_latest.py
src/utils/: generate_password.py  logger.py
tests/fixtures/: sample_data.py
tests/integration/: test_etl_pipeline.py
tests/unit/: test_models.py
